--- a/packages.config
+++ b/packages.config
@@ -4,4 +4,5 @@
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.3" targetFramework="net471" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net471" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net471" />
+  <package id="fastJSON" version="2.4.0.4" targetFramework="net471" />
 </packages>
