--- a/Assets/Tests/Pivo.CityBuilder.Tests.asmdef
+++ b/Assets/Tests/Pivo.CityBuilder.Tests.asmdef
@@ -4,7 +4,8 @@
     "references": [
         "GUID:27619889b8ba8c24980f49ee34dbb44a",
         "GUID:0acc523941302664db1f4e527237feb3",
-        "GUID:667189efeabf56b49abfe8ce367173de"
+        "GUID:667189efeabf56b49abfe8ce367173de",
+        "GUID:c19d80a018416d84e81aa66550f38117"
     ],
     "includePlatforms": [
         "Editor"
