--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -3,6 +3,7 @@
     "com.miniit.fastjson": "https://github.com/Mini-IT/fastJSON-unity-package.git",
     "com.unity.addressables": "2.7.6",
     "com.unity.ai.navigation": "2.0.9",
+    "com.unity.cinemachine": "3.1.5",
     "com.unity.collab-proxy": "2.10.2",
     "com.unity.ide.rider": "3.0.38",
     "com.unity.ide.visualstudio": "2.0.25",
